--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Kibum Moon\\Anaconda3\\envs\\r-reticulate\\python.exe"
+    "python.pythonPath": "C:\\Users\\Kibum Moon\\Anaconda3\\envs\\ML_study1\\python.exe"
 }
